--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="left border m1">
             <div class="Home flex border m1" style=" background-color: #1e1e1e;   padding-left: 20px;">
                 <div class="logo">
-                    <img class="filter" src="/img/logo.svg" alt="">
+                    <img class="filter" src="img/logo.svg" alt="">
                 </div>
                 <div class="home flex align-item " style="gap: 15px;">
                     <img class="filter" src="/img/home.svg" alt="">
