--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <img class="filter" src="img/logo.svg" alt="">
                 </div>
                 <div class="home flex align-item " style="gap: 15px;">
-                    <img class="filter" src="/img/home.svg" alt="">
+                    <img class="filter" src="img/home.svg" alt="">
                     <span>Home</span>
                 </div>
                 <div class="search flex align-item" style="gap: 15px;">
