--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                     <span>Home</span>
                 </div>
                 <div class="search flex align-item" style="gap: 15px;">
-                    <img class="filter" src="/img/search.svg" alt="">
+                    <img class="filter" src="img/search.svg" alt="">
                     <span>Search</span>
                 </div>
-                <img class="filter cross"  src="/img/cross.svg" alt="">
+                <img class="filter cross"  src="img/cross.svg" alt="">
             </div>
             <div class="library border m1" style=" background-color: #1e1e1e;">
                 <div class="heading">
-                    <img class="filter" src="/img/playlist.svg" alt="">
+                    <img class="filter" src="img/playlist.svg" alt="">
                     <span>Your library</span>
                   
                 </div>
@@ -56,7 +56,7 @@
         <div class="right border m1">
             <div class="navbar ">
                 <div class="arrows">
-                    <img class="filter hamburger" src="/img/hamburger.svg" alt="">
+                    <img class="filter hamburger" src="img/hamburger.svg" alt="">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#ffffff"
                         fill="none">
                         <path d="M15 6C15 6 9.00001 10.4189 9 12C8.99999 13.5812 15 18 15 18" stroke="currentColor"
@@ -84,7 +84,7 @@
                 <div class="songinfoanddur">
                     <div class="songinfo">song</div>
                     <div class="volduration">
-                        <img src="/img/vol.svg" alt="">
+                        <img src="img/vol.svg" alt="">
                         <div class="volume"><input type="range"></div>
                         <div class="duration">00:00/00:00</div>
                     </div>
@@ -92,10 +92,10 @@
                    
                 </div>
                 <div class="playbuttons">
-                    <img id="prev" src="/img/prev.svg" alt="">
-                    <img  id="pause" src="/img/pause.svg" alt="">
-                    <img  id="next" src="/img/next.svg" alt="">
-                </div>
+                    <img id="prev" src="img/prev.svg" alt="">
+                    <img  id="pause" src="img/pause.svg" alt="">
+                    <img  id="next" src="img/next.svg" alt="">
+                </div
                 <div class="seekbar">
                     <div class="circle"></div>
                 </div>
