--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <img id="prev" src="img/prev.svg" alt="">
                     <img  id="pause" src="img/pause.svg" alt="">
                     <img  id="next" src="img/next.svg" alt="">
-                </div
+                </div>
                 <div class="seekbar">
                     <div class="circle"></div>
                 </div>
